--- a/app/src/main/res/layout/introduction.xml
+++ b/app/src/main/res/layout/introduction.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <Button
         android:layout_width="wrap_content"
@@ -9,9 +10,39 @@
         android:text="返回"
         android:id="@+id/back" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView"
+        android:layout_gravity="right" >
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="160dp"
+                android:id="@+id/imageView"
+                android:layout_gravity="center_horizontal"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="133dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/inofcm"
+                android:id="@+id/inofcm" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="280dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/inofcomp"
+                android:id="@+id/textView" />
+
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
