--- a/app/src/main/res/layout/introduction.xml
+++ b/app/src/main/res/layout/introduction.xml
@@ -33,6 +33,7 @@
                 android:layout_height="133dp"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/inofcm"
+                android:padding="10dp"
                 android:id="@+id/inofcm" />
 
             <TextView
@@ -40,6 +41,7 @@
                 android:layout_height="280dp"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/inofcomp"
+                android:padding="10dp"
                 android:id="@+id/textView" />
 
         </LinearLayout>
